force-app/main/default/objects/Account/fields/Referral_Points__c.field-meta.xml
<CustomField>
    <fullName>Referral_Points__c</fullName>
    <label>Referral Points</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>