force-app/main/default/objects/Account/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <label>RM Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aakash Motwani</fullName>
            </value>
            <value>
                <fullName>Aarti Kocharekar</fullName>
            </value>
            <value>
                <fullName>Abhijit Karande</fullName>
            </value>
            <value>
                <fullName>Abhishek Varma</fullName>
            </value>
            <value>
                <fullName>A Harendra Sharma</fullName>
            </value>
            <value>
                <fullName>AKHIL RAJ</fullName>
            </value>
            <value>
                <fullName>Amrita Dhall</fullName>
            </value>
            <value>
                <fullName>Anaji Palav</fullName>
            </value>
            <value>
                <fullName>Anand Shah</fullName>
            </value>
            <value>
                <fullName>Aniket Naik</fullName>
            </value>
            <value>
                <fullName>Aniket Salve</fullName>
            </value>
            <value>
                <fullName>Ankita Bhosle</fullName>
            </value>
            <value>
                <fullName>Arfiyan Shaikh</fullName>
            </value>
            <value>
                <fullName>Ashish Ghogale</fullName>
            </value>
            <value>
                <fullName>Atul Tambe</fullName>
            </value>
            <value>
                <fullName>Avadut Tandel</fullName>
            </value>
            <value>
                <fullName>Babita Kapoor</fullName>
            </value>
            <value>
                <fullName>Bhagyashree Mengane</fullName>
            </value>
            <value>
                <fullName>Bhavesh Bhat</fullName>
            </value>
            <value>
                <fullName>Bhavesh Limbachiya</fullName>
            </value>
            <value>
                <fullName>Bhavita Lodaya</fullName>
            </value>
            <value>
                <fullName>Birendra Hati</fullName>
            </value>
            <value>
                <fullName>Dakshata Sawant</fullName>
            </value>
            <value>
                <fullName>Deepa Vengurlekar</fullName>
            </value>
            <value>
                <fullName>Deepti Jadhav</fullName>
            </value>
            <value>
                <fullName>Devika Shah</fullName>
            </value>
            <value>
                <fullName>Dharesh Joshi</fullName>
            </value>
            <value>
                <fullName>Dinesh Dsouza</fullName>
            </value>
            <value>
                <fullName>Dipali Pawar</fullName>
            </value>
            <value>
                <fullName>Dipti Kumari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>