force-app/main/default/objects/Account/fields/RW_Additional_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Additional_Contact_No__c</fullName>
    <label>Secondary Mobile Number</label>
    <type>TextArea</type>
</CustomField>