force-app/main/default/objects/Account/fields/RW_Company_Location__c.field-meta.xml
<CustomField>
    <fullName>RW_Company_Location__c</fullName>
    <label>Company Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>