force-app/main/default/objects/Account/fields/RW_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Company_Name__c</fullName>
    <label>Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abbott India</fullName>
            </value>
            <value>
                <fullName>ACC Ltd</fullName>
            </value>
            <value>
                <fullName>Accenture Group</fullName>
            </value>
            <value>
                <fullName>Aditya Birla Group</fullName>
            </value>
            <value>
                <fullName>Allied Digital Services</fullName>
            </value>
            <value>
                <fullName>Ambuja Cement</fullName>
            </value>
            <value>
                <fullName>AnandRathi Group</fullName>
            </value>
            <value>
                <fullName>Asian Paints Ltd</fullName>
            </value>
            <value>
                <fullName>Axis Group</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>BARC India</fullName>
            </value>
            <value>
                <fullName>Bayer India Ltd</fullName>
            </value>
            <value>
                <fullName>Bharti Airtel Group</fullName>
            </value>
            <value>
                <fullName>Bisleri India</fullName>
            </value>
            <value>
                <fullName>Bloomberg Group</fullName>
            </value>
            <value>
                <fullName>BNP Paribas Group</fullName>
            </value>
            <value>
                <fullName>Cadbury India Ltd</fullName>
            </value>
            <value>
                <fullName>Capgemini Global</fullName>
            </value>
            <value>
                <fullName>Centrum Group</fullName>
            </value>
            <value>
                <fullName>Cipla Limited</fullName>
            </value>
            <value>
                <fullName>Cisco Systems</fullName>
            </value>
            <value>
                <fullName>Citi Group</fullName>
            </value>
            <value>
                <fullName>Cognizant Group</fullName>
            </value>
            <value>
                <fullName>Colgate Ltd</fullName>
            </value>
            <value>
                <fullName>Credit Suisse</fullName>
            </value>
            <value>
                <fullName>Crompton Greaves</fullName>
            </value>
            <value>
                <fullName>Cummins India</fullName>
            </value>
            <value>
                <fullName>Dabur Group</fullName>
            </value>
            <value>
                <fullName>Deloitte Ltd</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>