force-app/main/default/objects/Account/fields/RW_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Customer_Email__c</fullName>
    <label>Customer Email</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>