force-app/main/default/objects/Account/fields/RW_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>