force-app/main/default/objects/Account/fields/RW_Full_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Full_Account_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Account Id</label>
    <type>Text</type>
</CustomField>