force-app/main/default/objects/Account/fields/RW_Full_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>RW_Full_Contact_Id__c</fullName>
    <formula>CASESAFEID(PersonContactId)</formula>
    <label>Full Contact Id</label>
    <type>Text</type>
</CustomField>