force-app/main/default/objects/Account/fields/RW_Locality__c.field-meta.xml
<CustomField>
    <fullName>RW_Locality__c</fullName>
    <label>Office Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>