force-app/main/default/objects/Account/fields/RW_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Mobile_No__c</fullName>
    <label>Mobile No.(TEXT)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>