force-app/main/default/objects/Account/fields/RW_Other_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Other_Company_Name__c</fullName>
    <label>Other Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>