force-app/main/default/objects/Account/fields/RW_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>