force-app/main/default/objects/Account/fields/Secondary_Mobile_No_with_code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_No_with_code__c</fullName>
    <formula>TEXT(Country_Code_2__c)&amp; (Alternate_Mobile_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Mobile No with code</label>
    <type>Text</type>
</CustomField>