force-app/main/default/objects/Account/fields/Secondary_Mobile_No_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Mobile_No_with_Country_Code__c</fullName>
    <formula>TRIM(RIGHT( TEXT(Country_Code_2__c) , LEN(TEXT(Country_Code_2__c))-1 ))+ RW_Secondary_Mobile_No__pc</formula>
    <label>Secondary Mobile No with Country Code</label>
    <type>Text</type>
</CustomField>