force-app/main/default/objects/Account/fields/Spouse_Age__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Age__c</fullName>
    <formula>FLOOR((TODAY()- Spouse_DOB__c +1)/365.2425)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>