force-app/main/default/objects/Account/fields/Spouse_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Company_Name__c</fullName>
    <label>Spouse Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>