force-app/main/default/objects/Account/fields/Spouse_DOB__c.field-meta.xml
<CustomField>
    <fullName>Spouse_DOB__c</fullName>
    <label>Spouse DOB</label>
    <type>Date</type>
</CustomField>