force-app/main/default/objects/Account/fields/Stop_Case_Emails__c.field-meta.xml
<CustomField>
    <fullName>Stop_Case_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Case Emails</label>
    <type>Checkbox</type>
</CustomField>