force-app/main/default/objects/Account/fields/TollFree_Number__c.field-meta.xml
<CustomField>
    <fullName>TollFree_Number__c</fullName>
    <label>TollFree Number</label>
    <type>Phone</type>
</CustomField>