force-app/main/default/objects/Account/fields/Triggered_to_Lockated__c.field-meta.xml
<CustomField>
    <fullName>Triggered_to_Lockated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triggered to Lockated?</label>
    <type>Checkbox</type>
</CustomField>