force-app/main/default/objects/Account/fields/Vehicles_owned__c.field-meta.xml
<CustomField>
    <fullName>Vehicles_owned__c</fullName>
    <label>Vehicles owned</label>
    <length>200</length>
    <type>Text</type>
</CustomField>