force-app/main/default/objects/Account/fields/Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Visit_Count__c</fullName>
    <label>Visit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>