force-app/main/default/objects/Account/fields/Visit_Done_Not_Booked_Customers__c.field-meta.xml
<CustomField>
    <fullName>Visit_Done_Not_Booked_Customers__c</fullName>
    <label>Visit Done Not Booked Customers</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Site Visit, Unit Blocked, Negotiation</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>