force-app/main/default/objects/Account/fields/Xcelerate_ID__c.field-meta.xml
<CustomField>
    <fullName>Xcelerate_ID__c</fullName>
    <label>Xcelerate ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>