force-app/main/default/objects/Account/validationRules/Contact_Number_Spouse_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Number_Spouse_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(IF( Contact_Number_Spouse__c!= null, NOT(REGEX(Contact_Number_Spouse__c, &quot;[0-9]{10}&quot;)), false)),
$Label.Disable_all_validations_from_Account == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Contact_Number_Spouse__c</errorDisplayField>
    <errorMessage>Please enter valid Phone number.</errorMessage>
</ValidationRule>