force-app/main/default/objects/Account/validationRules/Lead_Source_Corporate.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Corporate</fullName>
    <active>false</active>
    <description>If Lead Source is Corporate then Corporate Lookup becomes mandatory</description>
    <errorConditionFormula>IF(ISPICKVAL( Lead_Source__c , &apos;Corporate&apos;),
 ISBLANK( Corporate__c ),false  )</errorConditionFormula>
    <errorDisplayField>Corporate__c</errorDisplayField>
    <errorMessage>Please Enter a Value</errorMessage>
</ValidationRule>