force-app/main/default/objects/Account/validationRules/Lead_Source_Other_Than_Corporate.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Other_Than_Corporate</fullName>
    <active>false</active>
    <description>If Lead Source is Other than Corporate then Company Name becomes mandatory</description>
    <errorConditionFormula>AND 
( 
(NOT(ISPICKVAL(  Lead_Source__c ,&apos;&apos;))), 
OR( 
NOT(ISPICKVAL( Lead_Source__c , &apos;Corporate&apos;)), 
ISPICKVAL(  RW_Company_Name__c ,&apos;&apos;) 
) 
)</errorConditionFormula>
    <errorDisplayField>RW_Company_Name__c</errorDisplayField>
    <errorMessage>Please Enter a Value</errorMessage>
</ValidationRule>