force-app/main/default/objects/Account/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(IF(Phone!= null, NOT(REGEX(Phone, &quot;[0-9]{7,12}&quot;)), false)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter valid Phone number.</errorMessage>
</ValidationRule>