force-app/main/default/objects/Account/validationRules/validate_Birth_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Birth_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(!ISBLANK(Birth_Date__c),Birth_Date__c&gt;=  TODAY(), FALSE ),
$Label.Disable_all_validations_from_Account == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Birth_Date__c</errorDisplayField>
    <errorMessage>Birth Date should not be today or greater than today.</errorMessage>
</ValidationRule>