force-app/main/default/objects/Account/validationRules/validate_Father_s_birth_date.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Father_s_birth_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(!ISBLANK(Father_s_birth_date__c),Father_s_birth_date__c&gt;=  TODAY(), FALSE ),
$Label.Disable_all_validations_from_Account == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Father_s_birth_date__c</errorDisplayField>
    <errorMessage>Father’s birth date should not be today or greater than today.</errorMessage>
</ValidationRule>